add template mechanism and refactor notification service
